<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Aradhana Ghosh.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpInformation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/howToUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/how_to_use"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/startEncodingLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/howToUse"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/encode_start"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/startEncodingInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/howToUse"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/startEncodingLabel"
            android:layout_toRightOf="@id/startEncodingLabel"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/start_encoding_info"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/startDecodingLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/startEncodingInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/decode_start"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/startDecodingInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/startEncodingInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/startDecodingLabel"
            android:layout_toRightOf="@id/startDecodingLabel"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/start_decoding_info"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/saveImageLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/startDecodingInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/save_encoded_image"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/saveImageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/startDecodingInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/saveImageLabel"
            android:layout_toRightOf="@id/saveImageLabel"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/save_image_info"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/uploadCoverImageLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/saveImageInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/cover_image"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/uploadCoverImageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saveImageInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/uploadCoverImageLabel"
            android:layout_toRightOf="@id/uploadCoverImageLabel"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/cover_image_info"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/uploadEncodedImageLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/uploadCoverImageInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/encoded_image"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/uploadEncodedImageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uploadCoverImageInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/uploadEncodedImageLabel"
            android:layout_toRightOf="@id/uploadEncodedImageLabel"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/encoded_image_info"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/encodeLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/uploadEncodedImageInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/encode_button"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/encodeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uploadEncodedImageInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/encodeLabel"
            android:layout_toRightOf="@id/encodeLabel"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/encode_info"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/decodeLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/encodeInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/decode_button"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/decodeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/encodeInfo"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/decodeLabel"
            android:layout_toRightOf="@id/decodeLabel"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/decode_info"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/decodeInfo"
            android:layout_margin="15dp"
            android:text="@string/contact_label"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contactInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/contact_info"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactInfo"
            android:layout_margin="15dp"
            android:text="@string/faq_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/faqQ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faq"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/faq_q1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faqA1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faqQ1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/faq_a1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faqQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faqA1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/faq_q2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faqA2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faqQ2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/faq_a2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faqQ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faqA2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/faq_q3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faqA3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faqQ3"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/faq_a3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faqQ4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faqA3"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/faq_q4"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/faqA4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faqQ4"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/faq_a4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faqA4"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/icon_credit"
            android:textAlignment="center"
            android:textColor="@color/grey_400"
            android:textSize="14sp"
            android:textStyle="italic"/>

    </RelativeLayout>
</ScrollView>
